# competition-backend

./: .gitignore  README.md  TODO.md  app.py  connections.py  console.py  pyproject.toml  run.sh
app/: __init__.py  client.py  connections.py  console.py  lifecycle.py  main.py  verify.py
app/console/: console.py
app/core/: __init__.py  client.py  connections.py  roomManager.py  send.py
app/models/: primitives.py  verify.py
app/routes/: __init__.py  httproutes.py  routes.py  wsroutes.py
docs/: specs.md  uber.md
game/: __init__.py  example.py  game.py  gameActor.py  gameHandler.py  games.py  models.py  othello.py  uber.py
static/: style.css
templates/: index.html  item.html
